--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -19,6 +19,20 @@
           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
         <% end %>
       </tbody>
+      
+
+      <% if enhanced_cart.empty? %>
+      
+        <tfoot>
+        <tr>
+          <th colspan="4">
+            Your cart is empty! 
+            <%= link_to "Continue Shopping", root_path %>
+          </th>
+          
+        </tr>
+      </tfoot>
+    <% else %>
       <tfoot>
         <tr>
           <th colspan="4">
@@ -29,24 +43,30 @@
           </th>
         </tr>
       </tfoot>
+    <% end %>
+     
     </table>
   </div>
 
-  <div class="row">
-    <div class="col-xs-12">
-      <%= form_tag orders_path do %>
-        <script
-          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-amount="<%= cart_subtotal_cents %>"
-          data-name="Jungle"
-          data-description="Khurram Virani's Jungle Order"
-          data-locale="auto"
-          data-email="kvirani@gmail.com"
-          data-currency="cad">
-        </script>
-      <% end %>
+
+
+  <% if !enhanced_cart.empty? %>
+    <div class="row">
+      <div class="col-xs-12">
+        <%= form_tag orders_path do %>
+          <script
+            src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+            data-amount="<%= cart_subtotal_cents %>"
+            data-name="Jungle"
+            data-description="Khurram Virani's Jungle Order"
+            data-locale="auto"
+            data-email="kvirani@gmail.com"
+            data-currency="cad">
+          </script>
+        <% end %>
+      </div>
     </div>
-  </div>
+  <% end %>
 
 </section>
