Implemented sold-out badge feature

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,12 +9,20 @@
       <h1><%= @product.name %></h1>
       <p><%= @product.description %></p>
       <div class="quantity">
-      <span><%= @product.quantity %> in stock at $<%= @product.price %></span>
+        <% if @product.quantity == 0 %>
+          <span class="sold-out">Sold Out</span>
+        <% else %>
+          <span><%= @product.quantity %> in stock at $<%= @product.price %></span>
+        <% end %>
       </div>
       <div class="price">          
-        <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn' , method: :post do %>
-          <%= fa_icon "shopping-cart", text: 'Add' %>
-        <% end %>          
+        <% if @product.quantity > 0 %>
+          <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn', method: :post do %>
+            <%= fa_icon "shopping-cart", text: 'Add' %>
+          <% end %>
+        <% else %>
+          <%= button_to "Sold Out", "#", class: 'btn btn-danger', disabled: true %>
+        <% end %>
       </div>
     </div>
   </article>
