--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,4 +1,3 @@
-
 <header class="<%= current_page?(root_path) ? "hero" : "hero small" %>">
   <section class="title">
     <h3>Welcome to</h3>
@@ -24,33 +23,33 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
       <li class="nav-item">
-      <%= link_to about_index_path, class: "nav-link" do %>
-        About
-      <% end %>
-    </li>
+        <%= link_to about_index_path, class: "nav-link" do %>
+          About
+        <% end %>
+      </li>
 
-        <%# <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          > %>
-            <%# Categories %>
-          <%# </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdown"> %>
-            <% Category.all.each do |category| %>
-            <li class="nav-item">
-              <%= link_to category.name, category, class: "nav-link" %>
-            </li>
-            <% end %>
-          <%# </ul>
-        </li> %>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" 
+            href="#" 
+            id="navbarDropdownCategories" 
+            role="button" 
+            data-bs-toggle="dropdown" 
+            aria-expanded="false">
+            Categories
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownCategories">
+        <% Category.all.each do |category| %>
+          <li>
+            <%= link_to category.name, category, class: "dropdown-item" %>
+          </li>
+        <% end %>
+        </ul>
+      </li>
+
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
+
+      <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
             href="#"
@@ -64,12 +63,14 @@
           <ul class="dropdown-menu dropdown-menu-dark">
             <li><%= link_to 'Dashboard', [:admin, :root], class: "nav-link" %></li>
             <li><%= link_to 'Products', [:admin, :products], class: "nav-link" %></li>
+            <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
-        <li class="nav-item end-0">
-          <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
-          My Cart (<%= cart.size %>) <% end %>
-        </li>
+      <li class="nav-item end-0">
+        <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
+        My Cart (<%= cart.size %>) <% end %>
+      </li>
+   
       </ul>
     </div>
   </div>
